--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,65 +1,71 @@
 @use '~bootstrap/scss/bootstrap';
 
 .navbar {
-	transition: all 1.5s ease;
-	background-color: transparent;
+  transition: all 1.5s ease;
+  background-color: transparent;
+  box-sizing: border-box;
 }
 
 .navbar-active {
-	background-color: #000000;
-	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-		0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  background-color: #000000;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12),
+    0 1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
 nav ul li::after {
-	content: '';
-	display: block;
-	transform: scaleX(0);
-	height: 3px;
-	width: 100%;
-	background: bootstrap.$primary;
-	transition: transform 0.3s;
+  content: '';
+  display: block;
+  transform: scaleX(0);
+  height: 3px;
+  width: 100%;
+  background: bootstrap.$primary;
+  transition: transform 0.3s;
 }
 
 nav ul li:hover::after {
-	transform: scaleX(1);
-	transition: transform 0.3s;
+  transform: scaleX(1);
+  transition: transform 0.3s;
 }
 
 .hero-carousel {
-	height: 100vh;
-	width: 100vw;
-	overflow: hidden;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 
-	img {
-		animation: carousel-zoom-pan 10s linear both;
-	}
+  img {
+    animation: carousel-zoom-pan 10s linear both;
+  }
 
-	.carousel-inner,
-	.carousel-item {
-		height: 100vh;
-	}
+  .carousel-inner,
+  .carousel-item {
+    height: 100vh;
 
-	.carousel-caption {
-		top: 25%;
-		left: 0;
-		right: 0;
-	}
+    img {
+      height: 100vh;
+      object-fit: cover;
+    }
+  }
 
-	.carousel-control-prev,
-	.carousel-control-next {
-		top: auto;
-		bottom: 10%;
-	}
+  .carousel-caption {
+    top: 25%;
+    left: 0;
+    right: 0;
+  }
+
+  .carousel-control-prev,
+  .carousel-control-next {
+    top: auto;
+    bottom: 10%;
+  }
 }
 
 @keyframes carousel-zoom-pan {
-	from {
-		transform: scale(1, 1);
-		background-position: top;
-	}
-	to {
-		transform: scale(1.1, 1.05);
-		background-position: bottom;
-	}
+  from {
+    transform: scale(1, 1);
+    background-position: top;
+  }
+  to {
+    transform: scale(1.1, 1.05);
+    background-position: bottom;
+  }
 }
